<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_repos"
        android:icon="@drawable/ic_list"
        android:title="@string/menu_repos" />
    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/ic_users"
        android:title="@string/menu_users" />
    <item
        android:id="@+id/nav_time"
        android:icon="@drawable/ic_time"
        android:title="@string/menu_time" />
    <item
        android:id="@+id/nav_result"
        android:icon="@drawable/ic_replay"
        android:title="@string/menu_result" />

    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_rss_feed"
        android:title="@string/menu_feed" />

    <item
        android:id="@+id/nav_weather"
        android:icon="@drawable/ic_sun_cloud"
        android:title="@string/weather_nav_title" />

    <item
        android:id="@+id/nav_cryptocurrency"
        android:icon="@drawable/ic_cryptocurrency"
        android:title="@string/nav_title_cryptocurrency" />

    <item
        android:id="@+id/nav_restaurants"
        android:icon="@drawable/ic_time"
        android:title="@string/menu_food" />

</menu>