<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="RtlSymmetry,ContentDescription,RtlHardcoded">

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:paddingRight="8dp"
        />

    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/post_image"
        android:layout_toEndOf="@+id/post_image" />

    <TextView
        android:id="@+id/post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_title"
        android:layout_toRightOf="@+id/post_image"
        android:layout_toEndOf="@+id/post_image" />
</RelativeLayout>