<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/item_cryptocurrency_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_cryptocurrency"
        />

    <TextView
        android:id="@+id/item_cryptocurrency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/item_cryptocurrency_image"
        android:layout_toRightOf="@+id/item_cryptocurrency_image"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="0dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/item_cryptocurrency_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>