<resources>
    <string name="app_name">Sandbox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="create_repo">Create repo</string>
    <string name="repo_saved">Repo saved successfully</string>
    <string name="network_error">Network error, \nplease try again later</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="repo_button_like">like</string>
    <string name="repo_button_unlike">unlike</string>

    <string name="repo_like_count">like count: %d</string>

    <string name="menu_repos">Repos</string>
    <string name="menu_users">Users</string>
    <string name="menu_time">Time</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_food">Restaurants</string>
    <string name="current_time">Current time: %s</string>
    <string name="go_to_app">Go to the app</string>
    <string name="show_time">Show</string>
    <string name="hide_time">Hide</string>
    <string name="menu_result">Result</string>
    <string name="start_and_receive">Start and receive</string>
    <string name="return_btn">Return result</string>
    <string name="get_weather">Get weather</string>
    <string name="enter_city">Enter city</string>
    <string name="weather_nav_title">Weather</string>
    <string name="nav_title_cryptocurrency">CryptoCurrency</string>
    <string name="restaurants_nav_title">Restaurants</string>
    <string name="temperature">Temperature:</string>
    <string name="no_degrees_label">no degrees</string>
    <string name="no_pressure_label">no pressure</string>
    <string name="pressure_label">Pressure:</string>

    <string name="weather_error">Some error occurred, try again</string>

</resources>
